# balls

./: .codebuffrules  .env.example  .gitignore  @jump-sim.mjs  @open-all-ui-pages.bat  @reconcile-assets.mjs  AUDIT.md  CHANGELOG.md  DEEP_WIKI.md  Dockerfile  README.md  READPROMPT.md  _add_legend_export.cjs  _add_panel_toggles.cjs  _fix_3_remaining.cjs  architecture.md  build.html  build.md  cheatsheet.md  docker-compose.override.yml  docker-compose.yml  eslint.config.js  importmap.json  index.html  lighthouserc.json  main.js  manifest.json  networking.js  nginx.conf  offline.html  package-lock.json  package.json  puter_workers_demo.html  report.md  rules.md  server.js  step2.md  styles.css  sw.js  vite.config.js
apps/: web-extractor.html
assets/: catalog_stats.json  track_parts_inventory.json
backups/: audio.js.bak  ball_db.js.bak  ball_db.js.bak2  main.js.bak  persistence.js.bak  persistence.js.bak2  persistence.js.bak3  scene.js.bak  scene.js.bak2
builderworkshop/: agent.js  app.js  audit.md  controls.js  exporter.js  gallery.js  index.html  lassoSelect.js  loaders.js  modelInfo.js  modifiers.js  operations.js  painter.js  plan.md  rigging.js  scene.js  sculpting.js  selectGroups.js  selection.js  selectionHistory.js  state.js  styles.css  uiPanels.js  wireframeEditor.js
docs/: api.html  architecture.html  index.html  monetization.html  security.html  zoning_plan.html
engine/: scene.js
rust_core/: Cargo.toml
rust_core/src/: fingerprint_hasher.rs  image_processing.rs  lib.rs  physics_solver.rs  telemetry_recorder.rs  topology.rs  vectorizer.rs
(+120 files in other folders)
