[package]
name = "quad-core-physics"
version = "1.0.0"
edition = "2021"
description = "Quad-Core compute layer: physics solver + image vectorization + topology cleanup compiled to WASM"

[lib]
crate-type = ["cdylib"]

[dependencies]
# WASM bindings
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

# Image processing
image = "0.25"
imageproc = "0.25"

# Vectorization (raster → SVG)
vtracer = "0.6"

# Parallelism
rayon = "1.10"

# Error handling
console_error_panic_hook = "0.1"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
strip = true
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = true
